finally fixed overflow hidden

--- a/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
+++ b/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
@@ -20,6 +20,7 @@ body.magazine {
 
     .item {
       position:relative;
+	  overflow: hidden !important;
     }
   }
 
@@ -38,7 +39,6 @@ body.magazine {
 
     .content-list .item {
         margin-bottom: 0; //override defaults from content-list
-        overflow: hidden;
     }
 
     #cover {
